[gd_scene load_steps=12 format=2]

[ext_resource path="res://GFX/Interface/Fonts/kenvector_future.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Interfaces/FailScreen.gd" type="Script" id=2]
[ext_resource path="res://GFX/Interface/PNG/metalPanel_red.png" type="Texture" id=3]
[ext_resource path="res://GFX/Interface/Fonts/kenvector_future_thin.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Interfaces/UI_Theme.tres" type="Theme" id=5]
[ext_resource path="res://GFX/Interface/PNG/barHorizontal_white_mid.png" type="Texture" id=6]
[ext_resource path="res://GFX/Interface/PNG/barHorizontal_white_left.png" type="Texture" id=7]
[ext_resource path="res://GFX/Interface/PNG/barHorizontal_white_right.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 34
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 4 )

[node name="FailScreen" type="Popup"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NinePatchRect" type="NinePatchRect" parent="CenterContainer"]
margin_left = 440.0
margin_top = 160.0
margin_right = 840.0
margin_bottom = 560.0
rect_min_size = Vector2( 400, 400 )
texture = ExtResource( 3 )
patch_margin_left = 15
patch_margin_top = 40
patch_margin_right = 15
patch_margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0
custom_constants/separation = 13

[node name="Label" type="Label" parent="CenterContainer/NinePatchRect/VBoxContainer"]
margin_right = 340.0
margin_bottom = 27.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="Label2" type="Label" parent="CenterContainer/NinePatchRect/VBoxContainer"]
margin_top = 40.0
margin_right = 340.0
margin_bottom = 79.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Mission Failed"
align = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/NinePatchRect/VBoxContainer"]
margin_top = 92.0
margin_right = 340.0
margin_bottom = 104.0
custom_constants/separation = 0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="CenterContainer/NinePatchRect/VBoxContainer/HBoxContainer"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
margin_left = 78.0
margin_right = 90.0
margin_bottom = 12.0
rect_min_size = Vector2( 12, 12 )
texture = ExtResource( 7 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="CenterContainer/NinePatchRect/VBoxContainer/HBoxContainer"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
margin_left = 90.0
margin_right = 250.0
margin_bottom = 12.0
rect_min_size = Vector2( 160, 12 )
texture = ExtResource( 6 )
expand = true

[node name="TextureRect3" type="TextureRect" parent="CenterContainer/NinePatchRect/VBoxContainer/HBoxContainer"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
margin_left = 250.0
margin_right = 262.0
margin_bottom = 12.0
rect_min_size = Vector2( 12, 12 )
texture = ExtResource( 8 )
expand = true

[node name="NextLevelButton" type="Button" parent="CenterContainer/NinePatchRect/VBoxContainer"]
visible = false
margin_top = 117.0
margin_right = 340.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 4 )
text = "Next Level"
flat = true

[node name="ReplayButton" type="Button" parent="CenterContainer/NinePatchRect/VBoxContainer"]
margin_top = 117.0
margin_right = 340.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 4 )
text = "Try again"
flat = true

[node name="MainMenuButton" type="Button" parent="CenterContainer/NinePatchRect/VBoxContainer"]
margin_top = 153.0
margin_right = 340.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 4 )
text = "exit to Main Menu"
flat = true

[node name="QuitButton" type="Button" parent="CenterContainer/NinePatchRect/VBoxContainer"]
margin_top = 189.0
margin_right = 340.0
margin_bottom = 212.0
custom_fonts/font = SubResource( 3 )
text = "Quit to desktop"
flat = true
expand_icon = true

[connection signal="pressed" from="CenterContainer/NinePatchRect/VBoxContainer/NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
[connection signal="pressed" from="CenterContainer/NinePatchRect/VBoxContainer/ReplayButton" to="." method="_on_ReplayButton_pressed"]
[connection signal="pressed" from="CenterContainer/NinePatchRect/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="CenterContainer/NinePatchRect/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
